[package]
name = "coupon-api"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "coupon-api"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
once_cell = "1.12.0"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
rand = "0.8.5"

[dependencies]
# runtime
actix-web = { version = "4.2.1", features = ["cookies"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mysql = "23.0.0"
# error handling
thiserror = "1.0.37"
anyhow = "1.0.65"
#serde
serde_json = "1"
serde = "1.0.147"
serde-aux = "4.1.2"
# JWT and authorization
actix-jwt-auth-middleware = "0.2.0"
jwt-compact = "0.6.0"
exonum-crypto = "1.0.0"
# tracing crates
tracing = {version = "0.1.35", features = ["log"]}
tracing-log = "0.1.3"
tracing-bunyan-formatter = "0.3.3"
tracing-subscriber = { version = "0.3.14", features = ["registry", "env-filter"] }
tracing-actix-web = "0.6.0"
# others
config = "0.13.2"
url = "2.2.2"
secrecy = { version = "0.8.0", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
uuid = { version = "1.1.2", features = ["v4"] }
chrono = "0.4.23"
argon2 = {version = "0.4.1", features = ["std"]}





[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"mysql",
"uuid",
"chrono",
"migrate",
"offline"
]
