[package]
name = "coupon-api"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "coupon-api"

[lib]
path = "src/lib.rs"

[dev-dependencies]
once_cell = "1.12.0"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
rand = "0.8.5"

[dependencies]
# runtime
actix-web = "4.1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls"] }
# error handling
thiserror = "1.0.37"
anyhow = "1.0.68"
# serde
serde_json = "1"
serde = "1.0.147"
serde-aux = "4.1.2"
# Authentication and authorization
actix-web-httpauth = "0.6.0"
# tracing crates
tracing = {version = "0.1.35", features = ["log"]}
tracing-log = "0.1.3"
tracing-bunyan-formatter = "0.3.3"
tracing-subscriber = { version = "0.3.14", features = ["registry", "env-filter"] }
tracing-actix-web = "0.7.0"
# others
config = "0.13.2"
url = "2.2.2"
secrecy = { version = "0.8.0", features = ["serde"] }
uuid = { version = "1.1.2", features = ["v4"] }
chrono = { version = "0.4.23", features = ["serde"] }
# used in Tests
claim = "0.5.0"
base64 = "0.20.0"

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"mysql",
"uuid",
"chrono",
"migrate",
"offline"
]
# cargo sqlx prepare -- --offline
